    first function: wakeuptimer

- Thu Mar 13 2015 (chris1284)
  - fixed CALVIEW commandref (ms to sec)

- Tue Mar 17 2015 (wzut)
  - added two new modules at contrib/Infratec/* for Infratec Power Modules

- Sat Mar 21 2015 (loredo)
  - reading residentsGuests in module 10_RESIDENTS was renamed to residentsTotalGuests
  - introducing new readings in module 10_RESIDENTS: residentsTotalGuestsAbsent and residentsTotalGuestsPresent

- Sat Apr 25 2015 (risiko)
  - added new modules to support pilight (sending and receiving): switch, dimmer, temperature and humidity

- Mon Aug 17 2015 (rapster)
  - added new module 70_VolumeLink to link the volume-level and mute-state of a physical-device with a fhem-device
  
- Mon Aug 23 2015 (rapster)
  - added new module 74_Unifi for the Ubiquiti Networks (UBNT) - Unifi Controller.

- Wed Oct 21 2015 (sidey)
  - added new module 00_SIGNALduino, 90_SIGNALduino_un, 14_Hideki, 14_SD_WS07

- Thu Nov 3 2015 (loredo)
  - removed deprecated wrapper module 75_MSG.pm. Users will need to replace device definitions by 75_MSGFile.pm or 75_MSGMail.pm respectively.
  - added new FHEM command 'msg' to introduce integrated message routing functionality

- Fri Nov 13 2015 (loredo)
  - added new module 50_HP1000

- Sat Nov 14 2015 (mattwire)
  - added new module 98_ping to allow easy ping checks for devices
  
- Mon Nov 16 2015 (telekatz)
  - added new module 10_DUOFERNSTICK
  - added new module 30_DUOFERN

- Sun Nov 29 2015 (DS_Starter)
  - added new module 49_SSCam to trigger records of cameras within Synology Surveillance Station

- Sun Dec 06 2015 (Benni)
  - added new module 98_rssFeed to get data from rss news feeds
  
- Wed Dec 23 2015 (chris1284)
  - added new function for running terms
  - improved commandref

- Wed Dec 23 2015 (risiko)
  - added new module 98_weekprofile to manage week profiles
  
- Sun Jan 31 2016 (markus-m)
  - added new module 60_allergy to provide allergy forecast data for Germany